--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,12 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
+# vs Code settings
+.vscode/
+
+# gitignore files
+.gitignore
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
